# LocalBinaryPattern

./: README.md
prototipo/: AbstractLbp.cpp  AbstractLbp.h  Benchmark.h  CMakeLists.txt  LbpCuda.cu  LbpCuda.h  LbpPar.cpp  LbpPar.h  LbpSeq.cpp  LbpSeq.h  Types.h  kernel.cu  lodepng.cpp  lodepng.h  prototipo.exp  prototipo.lib  prototipo.vcxproj  test-output.lbp
